# my_game_engine

./: ArrayBuffer.h  CMakeLists.txt  Camera.h  Framebuffer.h  Globals.h  Input.h  Mesh.h  Model.h  NORMALSONLYSHADER.gs  NORMALSONLYSHADER.vs  README.md  Shader.h  UBO.h  VertexInformation.h  frameBufferShader.fs  glad.c  lightingshader.fs  lightingshader.vs  main.cpp  shader.fs  shader.gs  shader.vs  skyboxshader.vs  stencilshader.fs
boilerplateCode/: rotation
